Working version with Minio and Postgres.

--- a/notebooks/boston_house_prices.ipynb
+++ b/notebooks/boston_house_prices.ipynb
@@ -9,7 +9,6 @@
     "%matplotlib inline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "plt.style.use('ggplot')"
@@ -44,7 +43,6 @@
    "source": [
     "import xgboost\n",
     "\n",
-    "\n",
     "model = xgboost.XGBRegressor(objective='reg:squarederror')\n",
     "model = model.fit(input_df.values, target.values)"
    ]
@@ -78,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4635004550>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd34c387450>"
       ]
      },
      "execution_count": 6,
@@ -110,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4632efc9d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd34a27d0d0>"
       ]
      },
      "execution_count": 7,
@@ -132,6 +130,36 @@
     "importances = pd.Series(data=model.feature_importances_, index=input_df.columns).sort_values()\n",
     "importances.plot(kind='barh')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlflow.sklearn import save_model, log_model\n",
+    "from mlflow import log_artifacts\n",
+    "import shutil\n",
+    "import os\n",
+    "import mlflow\n",
+    "\n",
+    "mlflow.set_experiment('boston_housing')\n",
+    "\n",
+    "\n",
+    "model_path = '/srv/model/output/boston_housing'\n",
+    "if os.path.exists(model_path):\n",
+    "    shutil.rmtree(model_path)\n",
+    "    \n",
+    "\n",
+    "with mlflow.start_run():\n",
+    "    mlflow.log_metric('data_rows', input_df.shape[0])\n",
+    "    mlflow.log_metric('feature_count', input_df.shape[1])\n",
+    "    mlflow.log_metric('train_error', train_error)\n",
+    "    save_model(model, model_path)\n",
+    "    log_model(model, os.path.basename(model_path))\n",
+    "    print(\"Artifact repo is {}\".format(mlflow.get_artifact_uri()))\n",
+    "    log_artifacts(model_path)"
+   ]
   }
  ],
  "metadata": {
@@ -151,6 +179,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
