--- a/notebooks/executed_boston_house_prices.ipynb
+++ b/notebooks/executed_boston_house_prices.ipynb
@@ -76,7 +76,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7feff5519390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb4baa19410>"
       ]
      },
      "execution_count": 6,
@@ -108,7 +108,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7feff5406310>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb4ba907dd0>"
       ]
      },
      "execution_count": 7,
@@ -137,18 +137,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Artifact repo is s3://mlflow-regression/1/2c6c6854a4664d9687bb2e99e387e463/artifacts\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/home/admin/misc/anaconda3/envs/mlflow-b594cad6e8f0115f9cc5c4b1c344c9935c7d54a0/lib/python3.7/site-packages/yaml/constructor.py:126: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working\n",
       "  if not isinstance(key, collections.Hashable):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artifact repo is s3://mlflow-regression/1/2f25342453f44a3a85e2a8e5f6244a05/artifacts\n"
      ]
     }
    ],
